--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -14,7 +14,7 @@
         <!-- HEADER -->
           <div class="header">
              <div id="header_log" class="header_log">
-              <img  src="./assets/logo.png" alt="logo">
+              <img  src="../logo.png" alt="logo">
              </div>
              <div class="header_network" id="header_network">
               <p>
@@ -169,7 +169,7 @@
 
           <!-- HOME SCREEN -->
           <div id="createAccount" class="home_screen_signup">
-            <img src="./assets/logo.png" alt="logo" class="home_screen_img"/>
+            <img src="../logo.png" alt="logo" class="home_screen_img"/>
 
             <h1 class="home_title">WINGATE</h1>
             <p>
@@ -293,7 +293,7 @@
           
           <!-- LOGIN COMPONENTS -->
           <div id="LoginUser" class="home_screen_login">
-            <img src="./assets/logo.png" alt="" class="home_screen_img">
+            <img src="../logo.png" alt="" class="home_screen_img">
             <h1 class="home_title">@WINGATE</h1>
             <p>Welcome back! The decentralized web Dapp</p>
             <div class="form" id="login_form">
@@ -342,7 +342,7 @@
           <!-- TRANSFER COMPONENTS -->
           <div class="transfer_form" id="transfer_form">
             <div class="form">
-              <img src="./assets/arrowleft.png" alt="" class="goBack" id="goBack">
+              <img src="../assets/arrowleft.png" alt="" class="goBack" id="goBack">
               <p id="">Transfer Funds</p>
               <div class="field">
                 <svg
@@ -405,7 +405,7 @@
           <!-- IMPORT COMPONENT -->
             <div id="import_token" class="import_token" >
               <div class="form">
-                <img src="./assets/arrowleft.png" id="goBack_import" class="goBack" alt="">
+                <img src="../assets/arrowleft.png" id="goBack_import" class="goBack" alt="">
                 <p id="heading">Import Token</p>
                 <div class="field">
                   <svg
@@ -466,7 +466,7 @@
           <!-- IMPORT ACCOUNT NEW NOT RECORDED -->
              <div id="import_account" class="import_account">
               <div class="form">
-                  <img id="close_import_account" class="goBack" src="./assets/arrowleft.png" alt="">
+                  <img id="close_import_account" class="goBack" src="../assets/arrowleft.png" alt="">
 
                   <p id="heading">Import Account</p>
                   <div class="field">
@@ -518,23 +518,23 @@
                 <p>Active</p>
               </div>
             </div>
-            <img src="./assets/logo.png" alt="" class="home_header_img">
+            <img src="../logo.png" alt="" class="home_header_img">
             <h1 id="accountBalance">0.00 MATIC</h1>
             <div class="home_features">
               <div class="home_features_item">
-                <img src="./assets/buy.png" alt="" class="home_features_img">
+                <img src="../assets/buy.png" alt="" class="home_features_img">
                 <p class="text">Buy</p>
               </div>
               <div class="home_features_item " id="open_transfer">
-                <img src="./assets/send.png" alt="" class="home_features_img">
+                <img src="../assets/send.png" alt="" class="home_features_img">
                 <p class="text">Send</p>
               </div>
               <div class="home_features_item" id="openAccountImport">
-                <img src="./assets/user.png" alt="" class="home_features_img">
+                <img src="../assets/user.png" alt="" class="home_features_img">
                 <p class="text">Account</p>
               </div>
               <div class="home_features_item" id="open_import">
-                <img src="./assets/import.png" alt="" class="home_features_img">
+                <img src="../assets/import.png" alt="" class="home_features_img">
                 <p class="text">Import</p>
               </div>
             </div>
@@ -554,12 +554,12 @@
             <!-- ACTIVITY -->
             <div id="activity" class="activity">
               <div class="assets_item">
-                <img src="./assets/logo.png" alt="" class="assets_item_img">
+                <img src="..png" alt="" class="assets_item_img">
                 <span>547758995...</span>
                 <span>0.45 MATIC</span>
               </div>
               <div class="assets_item">
-                <img src="./assets/logo.png" alt="" class="assets_item_img">
+                <img src="..png" alt="" class="assets_item_img">
                 <span>547758995...</span>
                 <span>0.45 MATIC</span>
               </div>
